First version of the pages

--- a/development.html
+++ b/development.html
@@ -1,7 +1,9 @@
  <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<title>FEMhub: Open-source FEM distribution</title>
+<title>
+Femhub: Development
+</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link href="default.css" rel="stylesheet" type="text/css" />
@@ -54,35 +56,11 @@ related to FEMhub.
 <div id="center">
 	<div class="boxed">
         
+                <h1 class="heading">Development</h1>
 
-
-                <h1 class="heading">The FEMhub project</h1>
-
-<font color=purple><b>Open source FEM codes</b></font>: <br> 
-
-<a href="http://hpfem.org"><img src="images/hermes2d_logo.png" width=200 height=70></a>
-<a href="http://code.google.com/p/sfepy/"><img src="images/sfepy_logo_title_small.png" width=200 height=70></a><br>
-<br>
-
-<p>
-<font color=purple><b>Visualization</b></font>: <br> 
-
-<a href="http://mayavi.sourceforge.net/"><img src="images/mayavi.gif" width=200 height=70></a>
-<a href="http://matplotlib.sourceforge.net/"><img src="images/matplotlib_logo.png" width=200 height=70></a>
-
-<p>
-<font color=purple><b>Other software</b></font>: <br> 
-
-<a href="http://ipython.scipy.org/moin/"><img src="images/IPy-transparent-120-flush.png" width=200 height=70></a>
-<a href="http://numpy.scipy.org/"><img src="images/numpylogo.png" width=200 height=70></a>
-<a href="http://www.scipy.org/"><img src="images/scipylogo.gif" width=200 height=70></a>
-<a href="http://code.google.com/p/sympy/"><img src="images/sympy-160px.png" width=200 height=70></a><br>
-
-
-
-
-
-
+                <p>Development happens on the google code project site:<p>
+                <a
+                    href="http://code.google.com/p/femhub/">http://code.google.com/p/femhub/</a>
 
 
 	</div>
