--- a/overview.html
+++ b/overview.html
@@ -1,9 +1,7 @@
  <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<title>
-hpFEM.org: What is hp-FEM?
-</title>
+<title>FEMhub: Open-source FEM distribution</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link href="default.css" rel="stylesheet" type="text/css" />
@@ -60,48 +58,42 @@ related to FEMhub.
 <div id="center">
 	<div class="boxed">
         
-                <h1 class="heading">What is hp-FEM?</h1>
-                <font color=purple><b>hp-FEM</b></font> is a modern 
-version of the Finite Element Method (FEM), which combines
-adaptively finite elements of variable size (h) and polynomial 
-degree (p). With a good adaptivity algorithm, the hp-FEM 
-attains extremely fast (exponential) convergence rates.
-Sample hp-FEM mesh is shown in the following image which 
-corresponds to a flame propagation problem (enlarge using 
-right click + view image). 
+
+
+<h1 class="heading">The FEMhub project</h1>
 
 <p>
+FEMhub is an open source distribution of finite element software. It aims to
+provide a unified (Python) interface to all of them and also to allow to use
+them over the web notebook.
 
-<center>
-<img src="images/flame.jpg" width=500px/>
-</center>
+Currently it contains the project below.
+</p>
+
+<font color=purple><b>Open source FEM codes</b></font>: <br> 
+
+<a href="http://hpfem.org"><img src="images/hermes2d_logo.png" width=200
+    height=70 border=0></a>
+<a href="http://code.google.com/p/sfepy/"><img src="images/sfepy_logo_title_small.png" width=200 height=70 border=0></a><br>
 <br>
 
 <p>
+<font color=purple><b>Visualization</b></font>: <br> 
 
-
-
-The hp-FEM takes minutes where standard FEM takes hours or days. 
-However, adaptive hp-FEM codes are rather scarce since the hp-FEM
-is more demanding than standard FEM from both the mathematical 
-and programming point of view. </p>
+<a href="http://mayavi.sourceforge.net/"><img src="images/mayavi.gif" border=0></a>
+<a href="http://matplotlib.sourceforge.net/"><img src="images/matplotlib_logo.png" border=0></a>
 
 <p>
-<font color=purple><b>Example</b></font>:
-The following graph corresponding to the <a href="http://en.wikipedia.org/wiki/Hp-FEM">Fichera corner problem</a>
-is a representative example of the huge difference in convergence
-rates of
-adaptive low-order FEM (with linear and quadratic elements) and the
-hp-FEM. The horizontal and vertical axes show the number of degrees
-of freedom (unknowns in the discrete problem) and the error in
-logarithmic scale, respectively.
+<font color=purple><b>Other software</b></font>: <br> 
 
-<center>
-<img src="images/conv-new2.png" width=500px/>
-</center>
+<a href="http://ipython.scipy.org/moin/"><img src="images/IPy-transparent-120-flush.png" border=0></a>
+<a href="http://numpy.scipy.org/"><img src="images/numpylogo.png" border=0></a>
+<a href="http://www.scipy.org/"><img src="images/scipylogo.png" border=0></a>
+<a href="http://code.google.com/p/sympy/"><img src="images/sympy-160px.png" border=0></a><br>
 
-<p>
-                <font color=purple><p><b>hp-FEM on Wikipedia</b></font>: Visit the <a href="http://en.wikipedia.org/wiki/Hp-FEM">Wikipedia hp-FEM page</a>.
+
+
+
 
 
 
