--- a/uniquefeatures.html
+++ b/uniquefeatures.html
@@ -17,8 +17,9 @@ hpFEM.org: Unique features of Hermes
 	<div id="menu" class="boxed">
 		<h2 class="heading">Pages</h2>
 		<ul>
-			<li class="first"><a href="index.html" title="">FEMhub project overview</a></li>
-			<li><a href="http://nb.femhub.org" title="">Web notebook</a></li>
+			<li class="first"><a href="index.html" title="">Intro and Installation</a></li>
+			<li><a href="overview.html" title="">FEMhub Project Overview</a></li>
+			<li><a href="http://nb.femhub.org" title="">Web Notebook</a></li>
 			<li><a href="http://code.google.com/p/femhub/" title="">Development</a></li>
 		</ul>
 
@@ -47,6 +48,9 @@ related to FEMhub.
 	<div class="boxed">
         <h2 class="heading">News</h2>
 <ul>
+    <li>June 28, 2009: Femhub 0.9.3 released</li>
+    <li>June 26, 2009: Femhub 0.9.2 released</li>
+    <li>June 25, 2009: Femhub 0.9.1 released</li>
     <li>May 18, 2009: femhub.org page created</li>
     <li>May 13, 2009: femhub distribution started</li>
 </ul>
