--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@ related to FEMhub.
 	<div class="boxed">
         <h2 class="heading">News</h2>
 <ul>
+    <li>June 29, 2009: Femhub 0.9.4 released</li>
     <li>June 28, 2009: Femhub 0.9.3 released</li>
     <li>June 26, 2009: Femhub 0.9.2 released</li>
     <li>June 25, 2009: Femhub 0.9.1 released</li>
@@ -72,9 +73,9 @@ interface. We want FEMhub to become an alternative to commercial FEM codes.
 <p>
 Download, unpack, build:
 <pre>
-$ wget http://sage.math.washington.edu/home/ondrej/scratch/femhub/femhub-0.9.3.tar
-$ tar xf femhub-0.9.3.tar
-$ cd femhub-0.9.3
+$ wget http://sage.math.washington.edu/home/ondrej/scratch/femhub/femhub-0.9.4.tar
+$ tar xf femhub-0.9.4.tar
+$ cd femhub-0.9.4
 $ make
 </pre><br/>
 Depending on the speed of your computer, wait between 37 minutes to 1.5 hour.
@@ -93,7 +94,7 @@ work (if not, please report a bug).
 <pre>
 $ ./spd
 ----------------------------------------------------------------------
-| Femhub (FEM Distribution), Version 0.9.3, Release Date: 2009-06-28 |
+| Femhub (FEM Distribution), Version 0.9.4, Release Date: 2009-06-29 |
 | Type notebook() for the GUI.                                       |
 ----------------------------------------------------------------------
 In [1]: notebook()
