--- a/hpfem.html
+++ b/hpfem.html
@@ -48,6 +48,7 @@ related to FEMhub.
 	<div class="boxed">
         <h2 class="heading">News</h2>
 <ul>
+    <li>July 14, 2009: Femhub 0.9.5 released</li>
     <li>June 29, 2009: Femhub 0.9.4 released</li>
     <li>June 28, 2009: Femhub 0.9.3 released</li>
     <li>June 26, 2009: Femhub 0.9.2 released</li>
