--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@ related to FEMhub.
 	<div class="boxed">
         <h2 class="heading">News</h2>
 <ul>
+    <li>July 14, 2009: Femhub 0.9.5 released</li>
     <li>June 29, 2009: Femhub 0.9.4 released</li>
     <li>June 28, 2009: Femhub 0.9.3 released</li>
     <li>June 26, 2009: Femhub 0.9.2 released</li>
@@ -73,9 +74,9 @@ interface. We want FEMhub to become an alternative to commercial FEM codes.
 <p>
 Download, unpack, build:
 <pre>
-$ wget http://sage.math.washington.edu/home/ondrej/scratch/femhub/femhub-0.9.4.tar
-$ tar xf femhub-0.9.4.tar
-$ cd femhub-0.9.4
+$ wget http://sage.math.washington.edu/home/ondrej/scratch/femhub/femhub-0.9.5.tar
+$ tar xf femhub-0.9.5.tar
+$ cd femhub-0.9.5
 $ make
 </pre><br/>
 Depending on the speed of your computer, wait between 37 minutes to 1.5 hour.
@@ -94,7 +95,7 @@ work (if not, please report a bug).
 <pre>
 $ ./spd
 ----------------------------------------------------------------------
-| Femhub (FEM Distribution), Version 0.9.4, Release Date: 2009-06-29 |
+| Femhub (FEM Distribution), Version 0.9.5, Release Date: 2009-07-14 |
 | Type notebook() for the GUI.                                       |
 ----------------------------------------------------------------------
 In [1]: notebook()
