--- a/articles.html
+++ b/articles.html
@@ -48,13 +48,14 @@ related to FEMhub.
 	<div class="boxed">
         <h2 class="heading">News</h2>
 <ul>
-    <li>July 14, 2009: Femhub 0.9.5 released</li>
-    <li>June 29, 2009: Femhub 0.9.4 released</li>
-    <li>June 28, 2009: Femhub 0.9.3 released</li>
-    <li>June 26, 2009: Femhub 0.9.2 released</li>
-    <li>June 25, 2009: Femhub 0.9.1 released</li>
+    <li>July 30, 2009: FEMhub 0.9.6 released</li>
+    <li>July 14, 2009: FEMhub 0.9.5 released</li>
+    <li>June 29, 2009: FEMhub 0.9.4 released</li>
+    <li>June 28, 2009: FEMhub 0.9.3 released</li>
+    <li>June 26, 2009: FEMhub 0.9.2 released</li>
+    <li>June 25, 2009: FEMhub 0.9.1 released</li>
     <li>May 18, 2009: femhub.org page created</li>
-    <li>May 13, 2009: femhub distribution started</li>
+    <li>May 13, 2009: FEMhub distribution started</li>
 </ul>
 	</div>
 </div>
