--- a/index.html
+++ b/index.html
@@ -46,13 +46,14 @@ related to FEMhub.
 	<div class="boxed">
         <h2 class="heading">News</h2>
 <ul>
-    <li>July 14, 2009: Femhub 0.9.5 released</li>
-    <li>June 29, 2009: Femhub 0.9.4 released</li>
-    <li>June 28, 2009: Femhub 0.9.3 released</li>
-    <li>June 26, 2009: Femhub 0.9.2 released</li>
-    <li>June 25, 2009: Femhub 0.9.1 released</li>
+    <li>July 30, 2009: FEMhub 0.9.6 released</li>
+    <li>July 14, 2009: FEMhub 0.9.5 released</li>
+    <li>June 29, 2009: FEMhub 0.9.4 released</li>
+    <li>June 28, 2009: FEMhub 0.9.3 released</li>
+    <li>June 26, 2009: FEMhub 0.9.2 released</li>
+    <li>June 25, 2009: FEMhub 0.9.1 released</li>
     <li>May 18, 2009: femhub.org page created</li>
-    <li>May 13, 2009: femhub distribution started</li>
+    <li>May 13, 2009: FEMhub distribution started</li>
 </ul>
 	</div>
 </div>
@@ -74,9 +75,9 @@ interface. We want FEMhub to become an alternative to commercial FEM codes.
 <p>
 Download, unpack, build:
 <pre>
-$ wget http://sage.math.washington.edu/home/ondrej/scratch/femhub/femhub-0.9.5.tar
-$ tar xf femhub-0.9.5.tar
-$ cd femhub-0.9.5
+$ wget http://sage.math.washington.edu/home/ondrej/scratch/femhub/femhub-0.9.6.tar
+$ tar xf femhub-0.9.6.tar
+$ cd femhub-0.9.6
 $ make
 </pre><br/>
 Depending on the speed of your computer, wait between 37 minutes to 1.5 hour.
@@ -95,7 +96,7 @@ work (if not, please report a bug).
 <pre>
 $ ./spd
 ----------------------------------------------------------------------
-| Femhub (FEM Distribution), Version 0.9.5, Release Date: 2009-07-14 |
+| Femhub (FEM Distribution), Version 0.9.6, Release Date: 2009-07-30 |
 | Type notebook() for the GUI.                                       |
 ----------------------------------------------------------------------
 In [1]: notebook()
