--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ work (if not, please report a bug).
 <h2>First Steps</h2>
 <p>
 <pre>
-$ ./spd
+$ ./femhub
 ----------------------------------------------------------------------
 | Femhub (FEM Distribution), Version 0.9.6, Release Date: 2009-07-30 |
 | Type notebook() for the GUI.                                       |
