--- a/femcodes.html
+++ b/femcodes.html
@@ -48,6 +48,7 @@ related to FEMhub.
 	<div class="boxed">
         <h2 class="heading">News</h2>
 <ul>
+    <li>September 23, 2009: FEMhub 0.9.7 released</li>
     <li>July 30, 2009: FEMhub 0.9.6 released</li>
     <li>July 14, 2009: FEMhub 0.9.5 released</li>
     <li>June 29, 2009: FEMhub 0.9.4 released</li>
