--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@ related to FEMhub.
 	<div class="boxed">
         <h2 class="heading">News</h2>
 <ul>
+    <li>September 23, 2009: FEMhub 0.9.7 released</li>
     <li>July 30, 2009: FEMhub 0.9.6 released</li>
     <li>July 14, 2009: FEMhub 0.9.5 released</li>
     <li>June 29, 2009: FEMhub 0.9.4 released</li>
@@ -75,20 +76,26 @@ interface. We want FEMhub to become an alternative to commercial FEM codes.
 <p>
 Download, unpack, build:
 <pre>
-$ wget http://sage.math.washington.edu/home/ondrej/scratch/femhub/femhub-0.9.6.tar
-$ tar xf femhub-0.9.6.tar
-$ cd femhub-0.9.6
+$ wget http://sage.math.washington.edu/home/ondrej/femhub/femhub-0.9.7.tar
+$ tar xf femhub-0.9.7.tar
+$ cd femhub-0.9.7
 $ make
 </pre><br/>
-Depending on the speed of your computer, wait between 37 minutes to 1.5 hour.
-That's it.
+Depending on the speed of your computer, wait between 14 minutes to 1.5 hour.
+That's it. It should work on any Linux, Mac and Windows (in Cygwin), if it
+fails, please report a bug.
 </p>
 
-<p>
+</p>
 If you want, you can also download a binary from
-<a href="http://sage.math.washington.edu/home/ondrej/scratch/femhub/">here</a>,
+<a href="http://sage.math.washington.edu/home/ondrej/femhub/">here</a>,
 however, if it doesn't work for you, compile from source, that should always
-work (if not, please report a bug).
+work.
+</p>
+<p>
+You can take advantage of several cores on your computer by executing
+<code>export MAKE="make -j9"</code> before typing <code>make</code> to compile
+in parallel on 9 cores.
 </p>
 
 <h2>First Steps</h2>
@@ -96,14 +103,50 @@ work (if not, please report a bug).
 <pre>
 $ ./femhub
 ----------------------------------------------------------------------
-| Femhub (FEM Distribution), Version 0.9.6, Release Date: 2009-07-30 |
+| FEMhub Version 0.9.7, Release Date: 2009-09-23                     |
 | Type notebook() for the GUI.                                       |
 ----------------------------------------------------------------------
 In [1]: notebook()
-</pre>
-and a browser will start with the web notebook. Follow the instructions
-<a href="http://code.google.com/p/femhub/">here</a> to
-do your first calculation.
+</pre><br/>
+and a browser will start with the web notebook. Create a new worksheet and type
+the following into the cell:
+<br/>
+<br/>
+<pre>
+import hermes2d
+hermes2d.demo_layer()
+</pre><br/>
+Press Shift+Enter (or click the "evaluate" button) and you should see a
+calculation:
+<br/>
+<br/>
+<pre>
+iter=00, err_est=99.05%, DOFS=1
+iter=01, err_est=86.54%, DOFS=3
+iter=02, err_est=82.76%, DOFS=7
+iter=03, err_est=76.92%, DOFS=21
+iter=04, err_est=61.67%, DOFS=39
+iter=05, err_est=43.00%, DOFS=74
+iter=06, err_est=27.93%, DOFS=113
+iter=07, err_est=20.37%, DOFS=156
+iter=08, err_est=14.32%, DOFS=218
+iter=09, err_est=11.06%, DOFS=298
+iter=10, err_est= 8.01%, DOFS=412
+iter=11, err_est= 5.68%, DOFS=555
+iter=12, err_est= 3.86%, DOFS=714
+iter=13, err_est= 2.53%, DOFS=861
+iter=14, err_est= 1.66%, DOFS=1056
+iter=15, err_est= 1.06%, DOFS=1223
+iter=16, err_est= 0.68%, DOFS=1565
+</pre><br/>
+and then the solution:<br/>
+<img src="images/layer-sol.png"><br/>
+and a convergence graph:<br/>
+<img src="images/layer-convergence-graph.png"><br/>
+</p>
+<p>
+See here
+<a href="http://code.google.com/p/femhub/">here</a> for more instructions and demos.
 </p>
 
 
