--- a/output/welcome.html
+++ b/output/welcome.html
@@ -2,7 +2,7 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
     <head>
-        <title>FEMhub: Open-source FEM distribution</title>
+        <title>The FEMhub Project</title>
         <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 
         <link type="text/css" href="css/style.css" rel="stylesheet" />
@@ -12,20 +12,38 @@
     <body>
         <div id="background">
             <div id="container">
-                <div id="banner"></div>
+                <div id="banner">
+                    <img src="img/logo/femhub-logo-f-final.png" width=191 height=75></img>
+                    <img src="img/logo/femhub-logo-e-final.png" width=191 height=75></img>
+                    <img src="img/logo/femhub-logo-c-final.png" width=191 height=75></img>
+                    <img src="img/logo/femhub-logo-g-final.png" width=191 height=75></img>
+                    <img src="img/logo/femhub-logo-b-final.png" width=190 height=75></img>
+		</div>
                 <div class="box left">
-                    <div class="title">FEMhub Pages</div>
+                    <div class="title">The FEMhub Project</div>
                     <ul class="menu">
                         <li><a href="welcome.html">Welcome</a></li>
-                        <li><a href="install.html">Install</a></li>
-                        <li><a href="teach.html">Teach</a></li>
-                        <li><a href="compute.html">Compute</a></li>
-                        <li><a href="codes.html">Codes</a></li>
-                        <li><a href="conferences.html">Conferences</a></li>
+                        <li><a href="install.html">Download & Install</a></li>
+                        <li><a href="teach.html">Teach Online</a></li>
+                        <li><a href="compute.html">Compute Online</a></li>
+                        <li><a href="codes.html">Codes Included</a></li>
+                        <!-- <li><a href="conferences.html">Conferences</a></li> -->
                     </ul>
                 </div>
                 <div class="box right">
+                    <div class="title">Quick Links</div>
+                      <p>
+                      </p>
+                      <!-- <a href="http://nb.femhub.org/">web notebook</a><br> -->
+                      <a href="http://groups.google.com/group/femhub">Mailing list</a><br>
+                      <a href="http://hpfem.org/bugs/buglist.cgi?bug_status=__open__&product=FEMhub">FEMhub bugzilla</a><br>
+                      <a href="http://hpfem.org/bugs/buglist.cgi?&product=FEMhub&bug_status=NEW&bug_status=ASSIGNED&bug_status=REOPENED&field0-0-0=flagtypes.name&type0-0-0=equals&value0-0-0=review%3F">Patches to review</a><br>
+                      <a href="http://progit.org/book/">Git book</a>
+                      <p>
+                      </p>
                     <div class="title">Latest News</div>
+                      <p>
+                      </p>  
                     <ul class="list">
                         
                             <li class="when">September 23, 2009</li>
@@ -61,9 +79,11 @@
                     <div class="title">Our Mission</div>
                     <ul class="list">
                         <li class="what justify">
-                            To create an open-source distribution featuring many finite element
-                            codes, along with a web notebook and a unified Python interface. We
-                            want FEMhub to become an alternative to commercial FEM codes.
+                            To create an open-source distribution of finite element (FEM)
+                            codes enhanced with a unified Python interface. To support transparency 
+                            and establish quality standards in the development of open source FEM codes. 
+                            Eventually, we want FEMhub to become a free alternative to expensive 
+                            commerical FEM codes. 
                         </li>
                     </ul>
                 </div>
@@ -94,13 +114,13 @@
 <h1>Welcome to the FEMhub Project</h1>
 
 <p>
-FEMhub is an open-source distribution of free finite element codes enhanced with
-an interactive web notebook and a unified Python interface. The goals of FEMhub
-are to make it very easy to download and install many open source FEM codes at
-once, provide access to open source tools for geometrical modeling, mesh generation,
-and visualization, allow the user to define the problem only once and have it solved
-by means of various codes for comparison purposes, and provide an interactive browser
-tool making all codes in FEMhub easily accessible through the internet. The distribution
+There are many free finite element (FEM) codes on the web, whose comparison and 
+interoperability are
+extremely difficult due to different installation requirements, different input and 
+output formats, and capabilities. The goal of FEMhub is to bring transparency and establish 
+basic standards in the development of open dourse FEM codes. All codes in FEMhub will be 
+easy to compare via a unified Python interface and available to anyone for free
+either as a desktop application or via an interactive web notebook. The distribution
 is developed by an open source community around the hp-FEM group at the University of Nevada,
 Reno and available under the GPL license (Version 2, 1991).
 </p>
@@ -108,14 +128,14 @@ Reno and available under the GPL license (Version 2, 1991).
 <h2>Project Goals</h2>
 
 <ul>
-    <li>Make it very easy to download and install many open source FEM codes at once.</li>
-    <li>Provide easy access to open source tools for geometrical modeling, mesh generation, and visualization.</li>
-    <li>Allow the user to define the problem only once and have it solved by means of various codes.</li>
-    <li>Provide a browser tool so that all codes in FEMhub are accessible through the internet, for people who cannot or do not want to install the package, or do not have the necessary CPU power.</li>
-    <li>Make it possible to run FEM computations from any classroom equipped with internet access.</li>
-    <li>Create a quality assessment procedure and legal certification mechanism for open source FEM codes. </li>
+    <li>Make it possible to download and install many open source FEM codes easily.</li>
+    <li>Provide access to modeling, mesh generation, and visualization tools.</li>
+    <li>Allow the user to solve a model by means of various codes easily.</li>
+    <li>Make all codes in FEMhub usable online via an interactive web notebook.</li>
+    <li>Make it possible to run realistic FEM computations from any classroom.</li>
+    <li>Create a quality assessment procedure for open source FEM codes. </li>
 </ul>
-The FEMhub is a joint effort with <a href="http://www.nist.gov/index.html">NIST</a>.
+FEMhub is a joint effort with <a href="http://www.nist.gov/index.html">NIST</a>.
 
 
                 </div>
