--- a/output/codes.html
+++ b/output/codes.html
@@ -2,7 +2,7 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
     <head>
-        <title>FEMhub: Open-source FEM distribution</title>
+        <title>The FEMhub Project</title>
         <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 
         <link type="text/css" href="css/style.css" rel="stylesheet" />
@@ -12,20 +12,38 @@
     <body>
         <div id="background">
             <div id="container">
-                <div id="banner"></div>
+                <div id="banner">
+                    <img src="img/logo/femhub-logo-f-final.png" width=191 height=75></img>
+                    <img src="img/logo/femhub-logo-e-final.png" width=191 height=75></img>
+                    <img src="img/logo/femhub-logo-c-final.png" width=191 height=75></img>
+                    <img src="img/logo/femhub-logo-g-final.png" width=191 height=75></img>
+                    <img src="img/logo/femhub-logo-b-final.png" width=190 height=75></img>
+		</div>
                 <div class="box left">
-                    <div class="title">FEMhub Pages</div>
+                    <div class="title">The FEMhub Project</div>
                     <ul class="menu">
                         <li><a href="welcome.html">Welcome</a></li>
-                        <li><a href="install.html">Install</a></li>
-                        <li><a href="teach.html">Teach</a></li>
-                        <li><a href="compute.html">Compute</a></li>
-                        <li><a href="codes.html">Codes</a></li>
-                        <li><a href="conferences.html">Conferences</a></li>
+                        <li><a href="install.html">Download & Install</a></li>
+                        <li><a href="teach.html">Teach Online</a></li>
+                        <li><a href="compute.html">Compute Online</a></li>
+                        <li><a href="codes.html">Codes Included</a></li>
+                        <!-- <li><a href="conferences.html">Conferences</a></li> -->
                     </ul>
                 </div>
                 <div class="box right">
+                    <div class="title">Quick Links</div>
+                      <p>
+                      </p>
+                      <!-- <a href="http://nb.femhub.org/">web notebook</a><br> -->
+                      <a href="http://groups.google.com/group/femhub">Mailing list</a><br>
+                      <a href="http://hpfem.org/bugs/buglist.cgi?bug_status=__open__&product=FEMhub">FEMhub bugzilla</a><br>
+                      <a href="http://hpfem.org/bugs/buglist.cgi?&product=FEMhub&bug_status=NEW&bug_status=ASSIGNED&bug_status=REOPENED&field0-0-0=flagtypes.name&type0-0-0=equals&value0-0-0=review%3F">Patches to review</a><br>
+                      <a href="http://progit.org/book/">Git book</a>
+                      <p>
+                      </p>
                     <div class="title">Latest News</div>
+                      <p>
+                      </p>  
                     <ul class="list">
                         
                             <li class="when">September 23, 2009</li>
@@ -61,9 +79,11 @@
                     <div class="title">Our Mission</div>
                     <ul class="list">
                         <li class="what justify">
-                            To create an open-source distribution featuring many finite element
-                            codes, along with a web notebook and a unified Python interface. We
-                            want FEMhub to become an alternative to commercial FEM codes.
+                            To create an open-source distribution of finite element (FEM)
+                            codes enhanced with a unified Python interface. To support transparency 
+                            and establish quality standards in the development of open source FEM codes. 
+                            Eventually, we want FEMhub to become a free alternative to expensive 
+                            commerical FEM codes. 
                         </li>
                     </ul>
                 </div>
@@ -91,40 +111,76 @@
                 </div>
                 <div id="content">
                     
-<h2>Codes Included in FEMhub</h2>
+<h1>Codes Included in FEMhub</h1>
 
-<h4>Open source FEM codes</h4>
+<hr>
+<p>
+</p>
 
+<h2>A) FEM Engines</h1>
+
+<p>
+</p>
+<center>
+<a href="http://www.ctcms.nist.gov/fipy/">
+    <img src="img/fipy-logo.png" width=60 height=60>
+</a>
 <a href="http://hpfem.org">
     <img src="img/hermes2d_logo.png" width=200 height=70>
 </a>
 <a href="http://code.google.com/p/sfepy/">
-    <img src="img/sfepy_logo_title_small.png" width=200 height=70>
+    <img src="img/sfepy_logo_title_small.png" width=150 height=50>
 </a>
+<p>
+</p>
+<a href="http://math.nist.gov/phaml/"><font size=4>Phaml (logo not available)</font></a>
+</center>
+<p>
+</p>
+The number of FEM engines will grow in the future, depending on how fast we are able to 
+wrap them in Python and adjust their interface to match the FEMhub format. Any help 
+is appreciated. 
+<hr>
+<p>
+</p>
 
-<h4>Visualization</h4>
+<h2>B) Visualization Tools</h2>
 
+<p>
+</p>
+<center>
 <a href="http://mayavi.sourceforge.net/">
     <img src="img/mayavi.gif" border=0>
 </a>
 <a href="http://matplotlib.sourceforge.net/">
-    <img src="img/matplotlib_logo.png" border=0>
+    <img src="img/matplotlib_logo.png" width=300px border=0>
 </a>
+</center>
+<hr>
+<p>
+</p>
 
-<h4>Other software</h4>
+<h2>C) Supporting Libraries</h2>
 
+<p>
+</p>
+<center>
 <a href="http://ipython.scipy.org/moin/">
-    <img src="img/IPy-transparent-120-flush.png" border=0>
+    <img src="img/IPy-transparent-120-flush.png" border=0 height=50px>
 </a>
 <a href="http://numpy.scipy.org/">
-    <img src="img/numpylogo.png" border=0>
+    <img src="img/numpylogo.png" border=0 height=60px>
 </a>
+<p>
+</p>
 <a href="http://www.scipy.org/">
-    <img src="img/scipylogo.png" border=0>
+    <img src="img/scipylogo.png" border=0 height=60px>
 </a>
 <a href="http://code.google.com/p/sympy/">
-    <img src="img/sympy-160px.png" border=0>
-</a><br>
+    <img src="img/sympy-160px.png" border=0 height=60>
+</a>
+</center>
+<hr>
 
                 </div>
             </div>
