--- a/output/install.html
+++ b/output/install.html
@@ -2,7 +2,7 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
     <head>
-        <title>FEMhub: Open-source FEM distribution</title>
+        <title>The FEMhub Project</title>
         <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 
         <link type="text/css" href="css/style.css" rel="stylesheet" />
@@ -12,20 +12,38 @@
     <body>
         <div id="background">
             <div id="container">
-                <div id="banner"></div>
+                <div id="banner">
+                    <img src="img/logo/femhub-logo-f-final.png" width=191 height=75></img>
+                    <img src="img/logo/femhub-logo-e-final.png" width=191 height=75></img>
+                    <img src="img/logo/femhub-logo-c-final.png" width=191 height=75></img>
+                    <img src="img/logo/femhub-logo-g-final.png" width=191 height=75></img>
+                    <img src="img/logo/femhub-logo-b-final.png" width=190 height=75></img>
+		</div>
                 <div class="box left">
-                    <div class="title">FEMhub Pages</div>
+                    <div class="title">The FEMhub Project</div>
                     <ul class="menu">
                         <li><a href="welcome.html">Welcome</a></li>
-                        <li><a href="install.html">Install</a></li>
-                        <li><a href="teach.html">Teach</a></li>
-                        <li><a href="compute.html">Compute</a></li>
-                        <li><a href="codes.html">Codes</a></li>
-                        <li><a href="conferences.html">Conferences</a></li>
+                        <li><a href="install.html">Download & Install</a></li>
+                        <li><a href="teach.html">Teach Online</a></li>
+                        <li><a href="compute.html">Compute Online</a></li>
+                        <li><a href="codes.html">Codes Included</a></li>
+                        <!-- <li><a href="conferences.html">Conferences</a></li> -->
                     </ul>
                 </div>
                 <div class="box right">
+                    <div class="title">Quick Links</div>
+                      <p>
+                      </p>
+                      <!-- <a href="http://nb.femhub.org/">web notebook</a><br> -->
+                      <a href="http://groups.google.com/group/femhub">Mailing list</a><br>
+                      <a href="http://hpfem.org/bugs/buglist.cgi?bug_status=__open__&product=FEMhub">FEMhub bugzilla</a><br>
+                      <a href="http://hpfem.org/bugs/buglist.cgi?&product=FEMhub&bug_status=NEW&bug_status=ASSIGNED&bug_status=REOPENED&field0-0-0=flagtypes.name&type0-0-0=equals&value0-0-0=review%3F">Patches to review</a><br>
+                      <a href="http://progit.org/book/">Git book</a>
+                      <p>
+                      </p>
                     <div class="title">Latest News</div>
+                      <p>
+                      </p>  
                     <ul class="list">
                         
                             <li class="when">September 23, 2009</li>
@@ -61,9 +79,11 @@
                     <div class="title">Our Mission</div>
                     <ul class="list">
                         <li class="what justify">
-                            To create an open-source distribution featuring many finite element
-                            codes, along with a web notebook and a unified Python interface. We
-                            want FEMhub to become an alternative to commercial FEM codes.
+                            To create an open-source distribution of finite element (FEM)
+                            codes enhanced with a unified Python interface. To support transparency 
+                            and establish quality standards in the development of open source FEM codes. 
+                            Eventually, we want FEMhub to become a free alternative to expensive 
+                            commerical FEM codes. 
                         </li>
                     </ul>
                 </div>
@@ -91,18 +111,34 @@
                 </div>
                 <div id="content">
                     
-<h2>Download and Install FEMhub</h2>
+<h2>Download and Install</h2>
 
 <p>
 Download, unpack, build:
 </p>
 
+<font color=green>
 <pre>
 $ wget http://femhub.org/femhub-0.9.7.tar
 $ tar -xf femhub-0.9.7.tar
 $ cd femhub-0.9.7
 $ make
 </pre>
+</font>
+
+<p>
+You can take advantage of several cores on your computer by executing
+</p>
+
+<font color=green>
+<pre>
+$ export MAKE="make -j9"
+</pre>
+</font>
+
+<p>
+before typing make to compile in parallel on 9 cores. 
+</p>
 
 <p>
 Depending on the speed of your computer, wait between 14 minutes to 1.5 hour.
@@ -112,21 +148,14 @@ here, however, if it doesn't work for you, compile from source, that should
 always work.
 </p>
 
-<p>
-You can take advantage of several cores on your computer by executing
+If you encounter problems, let us know through the <a href="http://groups.google.com/group/femhub">FEMhub mailing list</a>.
 </p>
-
-<pre>
-$ export MAKE="make -j9"
-</pre>
-
 <p>
-before typing make to compile in parallel on 9 cores. If you encounter
-problems, let us know through the FEMhub mailing list.
 </p>
 
 <h2>Run It!</h2>
 
+<font color=green>
 <pre>
 $ ./femhub
 ------------------------------------------------------------
@@ -135,16 +164,19 @@ $ ./femhub
 ------------------------------------------------------------
 In [1]: notebook()
 </pre>
+</font>
 
 <p>
 and a browser will start with the web notebook. Create a new worksheet
 and type the following into the cell:
 </p>
 
+<font color=green>
 <pre>
 import hermes2d
 hermes2d.demo_layer()
 </pre>
+</font>
 
 <p>
 Press <i>Shift+Enter</i> (or click the "evaluate" button) and you
@@ -170,6 +202,16 @@ iter=14, err_est= 1.66%, DOFS=1056
 iter=15, err_est= 1.06%, DOFS=1223
 iter=16, err_est= 0.68%, DOFS=1565
 </pre>
+
+<img src="img/layer-1.png" height=250>
+<p>
+</p>
+<img src="img/layer-2.png" height=270>
+<p>
+</p>
+<img src="img/layer-3.png" height=260>
+
+
 
                 </div>
             </div>
