--- a/output/install.html
+++ b/output/install.html
@@ -119,7 +119,7 @@ Download, unpack, build:
 
 <font color=green>
 <pre>
-$ wget http://femhub.org/femhub-0.9.7.tar
+$ wget http://femhub.org/pub/femhub-0.9.7.tar
 $ tar -xf femhub-0.9.7.tar
 $ cd femhub-0.9.7
 $ make
