reverting the style patch

--- a/output/conferences.html
+++ b/output/conferences.html
@@ -110,7 +110,7 @@
                         </li>
                     </ul>
                 </div>
-                <div style = "height:650px;" id="content">
+                <div id="content">
                     
 
 <h2>FEM Conferences</h2>
