--- a/output/codes.html
+++ b/output/codes.html
@@ -110,7 +110,7 @@
                         </li>
                     </ul>
                 </div>
-                <div style = "height:650px;" id="content">
+                <div id="content">
                     
 <h1>Codes Included in FEMhub</h1>
 
