--- a/output/teach.html
+++ b/output/teach.html
@@ -110,7 +110,7 @@
                         </li>
                     </ul>
                 </div>
-                <div style = "height:650px;" id="content">
+                <div id="content">
                     
 
 <h2>Teach with FEMhub</h2>
