generate the files

--- a/output/welcome.html
+++ b/output/welcome.html
@@ -137,6 +137,12 @@ Reno and available under the GPL license (Version 2, 1991).
     <li>Create a quality assessment procedure for open source FEM codes. </li>
 </ul>
 FEMhub is a joint effort with <a href="http://www.nist.gov/index.html">NIST</a>.
+<BR>&nbsp;<BR>
+<BR>&nbsp;<BR>
+<BR>&nbsp;<BR>
+<BR>&nbsp;<BR>
+<BR>&nbsp;<BR>
+<BR>&nbsp;<BR>
 
 
                 </div>
